# burudoza

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  runner.sh
.streamlit/: config.toml
analysis/: 1.0-data-processing.ipynb  1.1-category-encoders.ipynb  2.0-modeling.ipynb  2.1-feature-selection.ipynb  3-eda-pre-processing.ipynb
burudoza/: app.py  directories.py
burudoza/stages/: __init__.py  stages.py
burudoza/stages/eda/: __init__.py  categorical_eda.py  eda.py  numerical_eda.py
burudoza/stages/intro/: intro.py
burudoza/stages/models/: models.py
burudoza/stages/models/config/: __init__.py  config.py  extra_trees_config.py  gradient_boosting.py  random_forest_config.py  setup.py
burudoza/utils/: __init__.py  display.py  evaluate.py  graph.py  helper.py
content/eda/: dropcols.txt  summary.txt
content/eda/categorical/: drivesys.txt  enclosure.txt  usageband.txt
content/eda/numerical/: machinehour-p1.txt  machinehour-p2.txt  machinehour-p3.txt  machineid.txt  yearmade.txt
content/intro/: overview.txt
content/models/: featimp-note.txt
data/: data_dict.feather  raw_valid.feather  xval.feather  ytrn.feather  yval.feather
infra/: .gitignore  package.json  pnpm-lock.yaml
infra/lib/: infra-stack.ts
